src/ingress-service/ingress-service.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/load-balance: round_robin
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /ws/stock-indicators
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 5000
          - path: /ws/notifications
            pathType: Prefix
            backend:
              service:
                name: notification-service
                port:
                  number: 5000
